tests/paczka1/fuzzy1/62435408.err
Error in line 13: A33 A502 25,5
Error in line 16: G3jbiBdm S27 35,9
Error in line 24: A33 S524 53,6
Error in line 22: mwAKtU S524 32,0
Error in line 32: mwAKtU A502 39,4
Error in line 30: A33 S27 31,3
